crates/swc/tests/tsc-references/propertyAndFunctionWithSameName_es5.1.normal.js
import _class_call_check from "@swc/helpers/lib/_class_call_check.js";
var C = /*#__PURE__*/ function() {
    "use strict";
    function C() {
        _class_call_check(this, C);
    }
    var _proto = C.prototype;
    _proto.x = function x() {
        return 1;
    };
    return C;
}();
var D = /*#__PURE__*/ function() {
    "use strict";
    function D() {
        _class_call_check(this, D);
    }
    var _proto = D.prototype;
    _proto.x // error
     = function x(v) {};
    return D;
}();
